# drf

./: .env_example  .gitignore  .gitlab-ci.yml  README.md  deploy.sh  docker-compose.yml  dockerfile  dump.rdb  pyproject.toml
config/: celery.py  settings.py  urls.py
education/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
education/migrations/: 0001_initial.py  0002_payment.py  0003_course_owner_lesson_owner.py  0004_alter_lesson_course.py
education/views/: __init__.py  drf.py
src/: _database.ini
users/: admin.py  models.py  urls.py
users/migrations/: 0001_initial.py  0002_subscription.py
users/models/: models.py  permissions.py
